# eyesthatblink

./: .gitmodules  CMakeLists.txt  NOTES  README.md  cmake_uninstall.cmake.in  config.h.in  create_deb.sh  main.cpp  requirements.txt  test_opencv.py
actions/: CMakeLists.txt  DEPENDENCIES  action.h  linux.cpp  linux.h  test_xbacklight.cpp  xbacklight.cc  xbacklight.h
cmake/: FindOpenCV.cmake  FindOpenCV.cmake_backup  FindTBB.cmake
core/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Indicator.hpp  blink_detector.cpp  blink_detector.hpp  constants.h  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  globals.cpp  globals.h  helpers.cpp  helpers.h  main_loop.cpp  main_loop.h  stablizer.cpp  stablizer.hpp
data/: EyesThatBlink.desktop
exp/: Makefile
pkgs/: PKGBUILD
python/: eyesthatblink.in
ui/: CMakeLists.txt  etbapplication.cpp  etbapplication.h  etbwindow.cpp  etbwindow.h  ui.h  ui_unix.cpp  ui_unix.h
